Fix version error